kubernetes/rancher-demo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rancher-demo
  labels:
    name: rancher-demo
