kubernetes/rancher-demo/lb.yml
apiVersion: v1
kind: Service
metadata:
  name: rancher-demo-lb
  namespace: rancher-demo
spec:
  selector:
    app: rancher-demo-app
  type: LoadBalancer
  ports:
  - name: http
    port: 8083
    targetPort: 8083    
    protocol: TCP
