kubernetes/rancher-demo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rancher-demo-ingress
  namespace: rancher-demo
spec:
  rules:
    - host: rancher-demo.local.kore-zone.com
      http:
        paths:
        - path: /         
          pathType: Prefix
          backend:
            service:
              name: rancher-demo-svc
              port:
                number: 8087
